--- a/pages/emoCardsAnger.html
+++ b/pages/emoCardsAnger.html
@@ -11,48 +11,48 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
-        <div class="container py-16">
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>生氣</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
-                </div>
-            </div>
-            <div class="d-flex flex-wrap mb-72">
-                <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger01">
-                    <p>不&nbsp;滿</p>
-                    <div class="img-box">
-                      <img src="../assets/images/anger/anger.svg" alt="anger">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger02">
-                    <p>煩&nbsp;躁</p>
-                    <div class="img-box">
-                      <img src="../assets/images/anger/anger.svg" alt="anger">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger03">
-                    <p>生&nbsp;氣</p>
-                    <div class="img-box">
-                      <img src="../assets/images/anger/anger.svg" alt="anger">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger04">
-                    <p>憤&nbsp;怒</p>
-                    <div class="img-box">
-                      <img src="../assets/images/anger/anger.svg" alt="anger">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger05">
-                    <p>暴&nbsp;怒</p>
-                    <div class="img-box">
-                      <img src="../assets/images/anger/anger.svg" alt="anger">
-                    </div>
-                </button>
-            </div>
+    <main>
+      <div class="container py-16">
+        <div class="titleBar d-flex justify-content-between align-items-center">
+          <h2>生氣</h2>
+          <div class="nav-btn d-flex justify-content-end">
+              <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
+          </div>
         </div>
-    </div>
+        <div class="d-flex flex-wrap mb-72">
+          <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger01">
+            <p>不&nbsp;滿</p>
+            <div class="img-box">
+              <img src="../assets/images/anger/anger.svg" alt="anger">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger02">
+            <p>煩&nbsp;躁</p>
+            <div class="img-box">
+              <img src="../assets/images/anger/anger.svg" alt="anger">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger03">
+            <p>生&nbsp;氣</p>
+            <div class="img-box">
+              <img src="../assets/images/anger/anger.svg" alt="anger">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger04">
+            <p>憤&nbsp;怒</p>
+            <div class="img-box">
+              <img src="../assets/images/anger/anger.svg" alt="anger">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#anger05">
+            <p>暴&nbsp;怒</p>
+            <div class="img-box">
+              <img src="../assets/images/anger/anger.svg" alt="anger">
+            </div>
+          </button>
+        </div>
+      </div>
+    </main>
     
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
