--- a/pages/emoCardsHate.html
+++ b/pages/emoCardsHate.html
@@ -11,66 +11,66 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
-        <div class="container py-16">
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>討厭</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
-                </div>
-            </div>
-            <div class="d-flex flex-wrap mb-72">
-                <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate01">
-                    <p>無&nbsp;聊</p>
-                    <div class="img-box">
-                      <img src="../assets/images/hate/hate.svg" alt="hate">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate02">
-                    <p>厭&nbsp;倦</p>
-                    <div class="img-box">
-                      <img src="../assets/images/hate/hate.svg" alt="hate">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate03">
-                    <p>自&nbsp;卑</p>
-                    <div class="img-box">
-                      <img src="../assets/images/hate/hate.svg" alt="hate">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate04">
-                    <p>討&nbsp;厭</p>
-                    <div class="img-box">
-                      <img src="../assets/images/hate/hate.svg" alt="hate">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate05">
-                    <p>嫉&nbsp;妒</p>
-                    <div class="img-box">
-                      <img src="../assets/images/hate/hate.svg" alt="hate">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate06">
-                    <p>厭&nbsp;惡</p>
-                    <div class="img-box">
-                      <img src="../assets/images/hate/hate.svg" alt="hate">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate07">
-                    <p>噁&nbsp;心</p>
-                    <div class="img-box">
-                      <img src="../assets/images/hate/hate.svg" alt="hate">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate08">
-                    <p>怨&nbsp;恨</p>
-                    <div class="img-box">
-                      <img src="../assets/images/hate/hate.svg" alt="hate">
-                    </div>
-                </button>
-            </div>
+    <main>
+      <div class="container py-16">
+        <div class="titleBar d-flex justify-content-between align-items-center">
+          <h2>討厭</h2>
+          <div class="nav-btn d-flex justify-content-end">
+              <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
+          </div>
         </div>
-    </div>
+        <div class="d-flex flex-wrap mb-72">
+          <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate01">
+            <p>無&nbsp;聊</p>
+            <div class="img-box">
+              <img src="../assets/images/hate/hate.svg" alt="hate">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate02">
+            <p>厭&nbsp;倦</p>
+            <div class="img-box">
+              <img src="../assets/images/hate/hate.svg" alt="hate">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate03">
+            <p>自&nbsp;卑</p>
+            <div class="img-box">
+              <img src="../assets/images/hate/hate.svg" alt="hate">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate04">
+            <p>討&nbsp;厭</p>
+            <div class="img-box">
+              <img src="../assets/images/hate/hate.svg" alt="hate">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate05">
+            <p>嫉&nbsp;妒</p>
+            <div class="img-box">
+              <img src="../assets/images/hate/hate.svg" alt="hate">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate06">
+            <p>厭&nbsp;惡</p>
+            <div class="img-box">
+              <img src="../assets/images/hate/hate.svg" alt="hate">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate07">
+            <p>噁&nbsp;心</p>
+            <div class="img-box">
+              <img src="../assets/images/hate/hate.svg" alt="hate">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-hate link-gray-900 class-card-hate" data-bs-toggle="modal" data-bs-target="#hate08">
+            <p>怨&nbsp;恨</p>
+            <div class="img-box">
+              <img src="../assets/images/hate/hate.svg" alt="hate">
+            </div>
+          </button>
+        </div>
+      </div>
+    </main>
     
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
