--- a/pages/emoCardsOthers.html
+++ b/pages/emoCardsOthers.html
@@ -11,84 +11,84 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
-        <div class="container py-16">
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>其他</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
-                </div>
-            </div>
-            <div class="d-flex flex-wrap mb-72">
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others01">
-                    <p>釋&nbsp;懷</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others02">
-                    <p>尷&nbsp;尬</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others03">
-                    <p>羨&nbsp;慕</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others04">
-                    <p>愧&nbsp;疚</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others05">
-                    <p>矛&nbsp;盾</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others06">
-                    <p>後&nbsp;悔</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others07">
-                    <p>委&nbsp;屈</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others08">
-                    <p>寂&nbsp;寞</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others09">
-                    <p>羞&nbsp;恥</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others10">
-                    <p>感&nbsp;動</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others11">
-                    <p>激&nbsp;動</p>
-                    <div class="img-box">
-                      <img src="../assets/images/others/others.svg" alt="others">
-                    </div>
-                </button>
-            </div>
+    <main>
+      <div class="container py-16">
+        <div class="titleBar d-flex justify-content-between align-items-center">
+          <h2>其他</h2>
+          <div class="nav-btn d-flex justify-content-end">
+              <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
+          </div>
         </div>
-    </div>
+        <div class="d-flex flex-wrap mb-72">
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others01">
+            <p>釋&nbsp;懷</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others02">
+            <p>尷&nbsp;尬</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others03">
+            <p>羨&nbsp;慕</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others04">
+            <p>愧&nbsp;疚</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others05">
+            <p>矛&nbsp;盾</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others06">
+            <p>後&nbsp;悔</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others07">
+            <p>委&nbsp;屈</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others08">
+            <p>寂&nbsp;寞</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others09">
+            <p>羞&nbsp;恥</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others10">
+            <p>感&nbsp;動</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-others link-gray-900 class-card-others" data-bs-toggle="modal" data-bs-target="#others11">
+            <p>激&nbsp;動</p>
+            <div class="img-box">
+              <img src="../assets/images/others/others.svg" alt="others">
+            </div>
+          </button>
+        </div>
+      </div>
+    </main>
     
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
