--- a/pages/emoCardsRelived.html
+++ b/pages/emoCardsRelived.html
@@ -11,54 +11,54 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
-        <div class="container py-16">
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>放鬆</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
-                </div>
-            </div>
-            <div class="d-flex flex-wrap mb-72">
-                <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived01">
-                    <p>舒&nbsp;服</p>
-                    <div class="img-box">
-                      <img src="../assets/images/relived/relived.svg" alt="relived">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived02">
-                    <p>放&nbsp;鬆</p>
-                    <div class="img-box">
-                      <img src="../assets/images/relived/relived.svg" alt="relived">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived03">
-                    <p>平&nbsp;靜</p>
-                    <div class="img-box">
-                      <img src="../assets/images/relived/relived.svg" alt="relived">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived04">
-                    <p>安&nbsp;心</p>
-                    <div class="img-box">
-                      <img src="../assets/images/relived/relived.svg" alt="relived">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived05">
-                    <p>自&nbsp;在</p>
-                    <div class="img-box">
-                      <img src="../assets/images/relived/relived.svg" alt="relived">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived06">
-                    <p>信&nbsp;任</p>
-                    <div class="img-box">
-                      <img src="../assets/images/relived/relived.svg" alt="relived">
-                    </div>
-                </button>
-            </div>
+    <main>
+      <div class="container py-16">
+        <div class="titleBar d-flex justify-content-between align-items-center">
+          <h2>放鬆</h2>
+          <div class="nav-btn d-flex justify-content-end">
+              <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
+          </div>
         </div>
-    </div>
+        <div class="d-flex flex-wrap mb-72">
+          <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived01">
+            <p>舒&nbsp;服</p>
+            <div class="img-box">
+              <img src="../assets/images/relived/relived.svg" alt="relived">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived02">
+            <p>放&nbsp;鬆</p>
+            <div class="img-box">
+              <img src="../assets/images/relived/relived.svg" alt="relived">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived03">
+            <p>平&nbsp;靜</p>
+            <div class="img-box">
+              <img src="../assets/images/relived/relived.svg" alt="relived">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived04">
+            <p>安&nbsp;心</p>
+            <div class="img-box">
+              <img src="../assets/images/relived/relived.svg" alt="relived">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived05">
+            <p>自&nbsp;在</p>
+            <div class="img-box">
+              <img src="../assets/images/relived/relived.svg" alt="relived">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-relived link-gray-900 class-card-relived" data-bs-toggle="modal" data-bs-target="#relived06">
+            <p>信&nbsp;任</p>
+            <div class="img-box">
+              <img src="../assets/images/relived/relived.svg" alt="relived">
+            </div>
+          </button>
+        </div>
+      </div>
+    </main>
     
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
