--- a/pages/emoCardsSadness.html
+++ b/pages/emoCardsSadness.html
@@ -11,90 +11,90 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
-        <div class="container py-16">
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>低落</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
-                </div>
-            </div>
-            <div class="d-flex flex-wrap mb-72">
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness01">
-                    <p>無&nbsp;奈</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness02">
-                    <p>挫&nbsp;折</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness03">
-                    <p>失&nbsp;望</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness04">
-                    <p>無&nbsp;力</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness05">
-                    <p>沮&nbsp;喪</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness06">
-                    <p>難&nbsp;過</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness07">
-                    <p>無&nbsp;助</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness08">
-                    <p>悲&nbsp;傷</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness09">
-                    <p>心&nbsp;痛</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness10">
-                    <p>憂&nbsp;鬱</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness11">
-                    <p>崩&nbsp;潰</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness12">
-                    <p>絕&nbsp;望</p>
-                    <div class="img-box">
-                      <img src="../assets/images/sadness/sadness.svg" alt="sadness">
-                    </div>
-                </button>
-            </div>
+    <main>
+      <div class="container py-16">
+        <div class="titleBar d-flex justify-content-between align-items-center">
+          <h2>低落</h2>
+          <div class="nav-btn d-flex justify-content-end">
+              <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
+          </div>
         </div>
-    </div>
+        <div class="d-flex flex-wrap mb-72">
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness01">
+            <p>無&nbsp;奈</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness02">
+            <p>挫&nbsp;折</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness03">
+            <p>失&nbsp;望</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness04">
+            <p>無&nbsp;力</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness05">
+            <p>沮&nbsp;喪</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness06">
+            <p>難&nbsp;過</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness07">
+            <p>無&nbsp;助</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness08">
+            <p>悲&nbsp;傷</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness09">
+            <p>心&nbsp;痛</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness10">
+            <p>憂&nbsp;鬱</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness11">
+            <p>崩&nbsp;潰</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-sadness link-gray-900 class-card-sadness" data-bs-toggle="modal" data-bs-target="#sadness12">
+            <p>絕&nbsp;望</p>
+            <div class="img-box">
+              <img src="../assets/images/sadness/sadness.svg" alt="sadness">
+            </div>
+          </button>
+        </div>
+      </div>
+    </main>
     
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
