--- a/pages/findEmoAnger.html
+++ b/pages/findEmoAnger.html
@@ -11,7 +11,7 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
+    <main>
         <div class="container py-16">
             <!-- title bar -->
             <div class="titleBar d-flex justify-content-between align-items-center">
@@ -79,10 +79,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
     
-    <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
+    <%- include('./layout/modalEmoCardsPlus'); -%>
 
     <script type="module" src="../main.js"></script>
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
