--- a/pages/findEmoBackground.html
+++ b/pages/findEmoBackground.html
@@ -11,7 +11,7 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
+    <main>
         <div class="container py-16">
             <!-- process bar -->
             <div class="d-flex justify-content-end">
@@ -87,7 +87,7 @@
                 </span>
             </div>
         </div>
-    </div>
+    </main>
     
     <%- include('./layout/footer'); -%>
 
