--- a/pages/findEmoThanks.html
+++ b/pages/findEmoThanks.html
@@ -11,8 +11,8 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
-        <div class="container py-16">
+    <main>
+        <div class="container py-16 mb-48">
             <!-- process bar -->
             <div class="d-flex justify-content-end">
                 <div class="progressBar mt-16 mb-8 px-12">
@@ -67,12 +67,9 @@
                     <img src="../assets/images/emoStory/lime-thanks.svg" alt="thanks myself">
                 </div>
             </div>
-
-        
         </div>
-    </div>
+    </main>
     
-    <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
