--- a/pages/home.html
+++ b/pages/home.html
@@ -11,7 +11,7 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="homepage">
+    <main class="homepage">
       <div class="container">
         <h2 class="text-white mb-24">找尋自我</h2>
         <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
@@ -19,7 +19,7 @@
           <a class="px-64 btn btn-pink c-btn c-btn-xl" href="aboutEmotions.html">認識情緒</a>
         </div>
       </div>
-    </div>
+    </main>
 
     <script type="module" src="../main.js"></script>
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
