--- a/pages/index.html
+++ b/pages/index.html
@@ -9,8 +9,7 @@
   <body>
     <%- include('./layout/header'); -%>
 
-    <div class="homepage">
-      <!-- <img src="../assets/images/homepage.svg" alt="homepage background"> -->
+    <main class="homepage">
       <div class="container">
         <h2 class="text-white mb-24">找尋自我</h2>
         <h2 class="text-white text-end mb-40">情緒的浪潮</h2>
@@ -18,7 +17,7 @@
           <a class="btn btn-pink c-btn c-btn-xl" href="signup.html">進入情緒浪潮</a>
         </div>
       </div>
-    </div>
+    </main>
 
     <script type="module" src="../main.js"></script>
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
