--- a/pages/myEmoCardsHolder.html
+++ b/pages/myEmoCardsHolder.html
@@ -11,7 +11,7 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
+    <main>
         <div class="container py-16">
             <!-- process bar -->
             <div class="d-flex justify-content-end">
@@ -69,10 +69,10 @@
             </div>
         
         </div>
-    </div>
+    </main>
     
-    <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
+    <%- include('./layout/modalEmoCardsCross'); -%>
 
     <script type="module" src="../main.js"></script>
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
