--- a/pages/emoCardsAmazed.html
+++ b/pages/emoCardsAmazed.html
@@ -11,42 +11,42 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
-        <div class="container py-16">
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>驚訝</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
-                </div>
-            </div>
-            <div class="d-flex flex-wrap mb-72">
-                <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed01">
-                    <p>錯&nbsp;愕</p>
-                    <div class="img-box">
-                      <img src="../assets/images/amazed/amazed.svg" alt="amazed">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed02">
-                    <p>驚&nbsp;訝</p>
-                    <div class="img-box">
-                      <img src="../assets/images/amazed/amazed.svg" alt="amazed">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed03">
-                    <p>驚&nbsp;喜</p>
-                    <div class="img-box">
-                      <img src="../assets/images/amazed/amazed.svg" alt="amazed">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed04">
-                    <p>震&nbsp;驚</p>
-                    <div class="img-box">
-                      <img src="../assets/images/amazed/amazed.svg" alt="amazed">
-                    </div>
-                </button>
+    <main>
+      <div class="container py-16">
+        <div class="titleBar d-flex justify-content-between align-items-center">
+            <h2>驚訝</h2>
+            <div class="nav-btn d-flex justify-content-end">
+                <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
             </div>
         </div>
-    </div>
+        <div class="d-flex flex-wrap mb-72">
+            <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed01">
+                <p>錯&nbsp;愕</p>
+                <div class="img-box">
+                  <img src="../assets/images/amazed/amazed.svg" alt="amazed">
+                </div>
+            </button>
+            <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed02">
+                <p>驚&nbsp;訝</p>
+                <div class="img-box">
+                  <img src="../assets/images/amazed/amazed.svg" alt="amazed">
+                </div>
+            </button>
+            <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed03">
+                <p>驚&nbsp;喜</p>
+                <div class="img-box">
+                  <img src="../assets/images/amazed/amazed.svg" alt="amazed">
+                </div>
+            </button>
+            <button type="button" class="class-card me-16 bg-amazed link-gray-900 class-card-amazed" data-bs-toggle="modal" data-bs-target="#amazed04">
+                <p>震&nbsp;驚</p>
+                <div class="img-box">
+                  <img src="../assets/images/amazed/amazed.svg" alt="amazed">
+                </div>
+            </button>
+        </div>
+      </div>
+    </main>
     
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
