--- a/pages/emoCardsHappy.html
+++ b/pages/emoCardsHappy.html
@@ -11,60 +11,60 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="classifiedPage" style="min-height: 80vh;">
-        <div class="container py-16">
-            <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>快樂</h2>
-                <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
-                </div>
-            </div>
-            <div class="d-flex flex-wrap mb-72">
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy01">
-                    <p>滿&nbsp;足</p>
-                    <div class="img-box">
-                      <img src="../assets/images/happy/happy.svg" alt="happy">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy02">
-                    <p>快&nbsp;樂</p>
-                    <div class="img-box">
-                      <img src="../assets/images/happy/happy.svg" alt="happy">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy03">
-                    <p>幸&nbsp;福</p>
-                    <div class="img-box">
-                      <img src="../assets/images/happy/happy.svg" alt="happy">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy04">
-                    <p>自&nbsp;豪</p>
-                    <div class="img-box">
-                      <img src="../assets/images/happy/happy.svg" alt="happy">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy05">
-                    <p>興&nbsp;奮</p>
-                    <div class="img-box">
-                      <img src="../assets/images/happy/happy.svg" alt="happy">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy06">
-                    <p>痛&nbsp;快</p>
-                    <div class="img-box">
-                      <img src="../assets/images/happy/happy.svg" alt="happy">
-                    </div>
-                </button>
-                <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy07">
-                    <p>狂&nbsp;喜</p>
-                    <div class="img-box">
-                      <img src="../assets/images/happy/happy.svg" alt="happy">
-                    </div>
-                </button>
-            </div>
+    <main>
+      <div class="container py-16">
+        <div class="titleBar d-flex justify-content-between align-items-center">
+          <h2>快樂</h2>
+          <div class="nav-btn d-flex justify-content-end">
+              <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
+          </div>
         </div>
-    </div>
+        <div class="d-flex flex-wrap mb-72">
+          <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy01">
+            <p>滿&nbsp;足</p>
+            <div class="img-box">
+              <img src="../assets/images/happy/happy.svg" alt="happy">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy02">
+            <p>快&nbsp;樂</p>
+            <div class="img-box">
+              <img src="../assets/images/happy/happy.svg" alt="happy">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy03">
+            <p>幸&nbsp;福</p>
+            <div class="img-box">
+              <img src="../assets/images/happy/happy.svg" alt="happy">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy04">
+            <p>自&nbsp;豪</p>
+            <div class="img-box">
+              <img src="../assets/images/happy/happy.svg" alt="happy">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy05">
+            <p>興&nbsp;奮</p>
+            <div class="img-box">
+              <img src="../assets/images/happy/happy.svg" alt="happy">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy06">
+            <p>痛&nbsp;快</p>
+            <div class="img-box">
+              <img src="../assets/images/happy/happy.svg" alt="happy">
+            </div>
+          </button>
+          <button type="button" class="class-card me-16 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy07">
+            <p>狂&nbsp;喜</p>
+            <div class="img-box">
+              <img src="../assets/images/happy/happy.svg" alt="happy">
+            </div>
+          </button>
+        </div>
+      </div>
+    </main>
     
     <%- include('./layout/modalEmoCards'); -%>
     <%- include('./layout/footer'); -%>
