--- a/pages/findMyEmotions.html
+++ b/pages/findMyEmotions.html
@@ -11,39 +11,41 @@
   <body>
     <%- include('./layout/headerLogined'); -%>
 
-    <div class="container py-16">
-        <!-- 標題欄 -->
-        <div class="titleBar d-flex justify-content-between align-items-center">
-          <h2>找尋我的情緒</h2>
+    <main>
+      <div class="container py-16 mb-48">
+          <!-- 標題欄 -->
+          <div class="titleBar d-flex justify-content-between align-items-center">
+            <h2>找尋我的情緒</h2>
+          </div>
+  
+          <!-- 導覽說明 -->
+        <div class="guid px-24 py-16 bg-main-tint03">
+          <p class="mb-8">你在情緒的世界裡迷航了嗎？</p>
+          <p class="mb-8">沒關係，讓我們一起在浪潮情緒卡中，找尋自己的情緒。</p>
+          <p>
+            你可以藉由以下兩種方式「
+            <a class="px-4" href="">分類探索</a>
+            」、「
+            <a class="px-4" href="">自由探索</a>
+            」，挑選情緒卡。
+          </p>
         </div>
-
-        <!-- 導覽說明 -->
-      <div class="guid px-24 py-16 bg-main-tint03">
-        <p class="mb-8">你在情緒的世界裡迷航了嗎？</p>
-        <p class="mb-8">沒關係，讓我們一起在浪潮情緒卡中，找尋自己的情緒。</p>
-        <p>
-          你可以藉由以下兩種方式「
-          <a class="px-4" href="">分類探索</a>
-          」、「
-          <a class="px-4" href="">自由探索</a>
-          」，挑選情緒卡。
-        </p>
+  
+        <!-- 兩大按鈕 -->
+        <div class="py-32 d-flex justify-content-center">
+          <a class="btn-find me-96 d-flex flex-column align-items-center" href="findEmoClassified.html">
+            <h2>分類探索</h2>
+            <img class="default" src="../assets/images/findEmoClassified.svg" alt="分類探索">
+            <img class="hover" src="../assets/images/findEmoClassifiedHover.svg" alt="分類探索">
+          </a>
+          <a class="btn-find d-flex flex-column align-items-center" href="findEmoFree.html">
+            <h2>自由探索</h2>
+            <img class="default" src="../assets/images/finEmoFree.svg" alt="自由探索">
+            <img class="hover" src="../assets/images/findEmoClassifiedHover.svg" alt="分類探索">
+          </a>
+        </div>
       </div>
-
-      <!-- 兩大按鈕 -->
-      <div class="py-32 d-flex justify-content-center">
-        <a class="btn-find me-96 d-flex flex-column align-items-center" href="findEmoClassified.html">
-          <h2>分類探索</h2>
-          <img class="default" src="../assets/images/findEmoClassified.svg" alt="分類探索">
-          <img class="hover" src="../assets/images/findEmoClassifiedHover.svg" alt="分類探索">
-        </a>
-        <a class="btn-find d-flex flex-column align-items-center" href="findEmoFree.html">
-          <h2>自由探索</h2>
-          <img class="default" src="../assets/images/finEmoFree.svg" alt="自由探索">
-          <img class="hover" src="../assets/images/findEmoClassifiedHover.svg" alt="分類探索">
-        </a>
-      </div>
-    </div>
+    </main>
     
     <%- include('./layout/footer'); -%>
 
